--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+v2.8.14:
+* Fix authentication when LDAPAuthBinds is enabled, which broke in 2.8.13.
+* Fix a typo in the group-by-name filter.
+
 v2.8.13:
 * This release REQUIRES ProFTPD 1.2.11rc1 or later.
 * mod_ldap now uses ProFTPD's CreateHome to create home directories. Some
