--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+v2.8.18:
+* Remove all local caching code in favor of the recently added caching in
+  the ProFTPD Auth layer.
+* Silence some compiler warnings.
+
 v2.8.17:
 * Use non-deprecated LDAP API functions if the LDAP SDK is new enough to
   comply with draft-ietf-ldapext-ldap-c-api-04.
