--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+v2.8.19:
+* Fix compilation with old LDAP SDKs (LDAP_API_VERSION < 2000). Thanks to
+  Saju Paul <saju.paul@messageway.com>.
+
 v2.8.18:
 * Remove all local caching code in favor of the recently added caching in
   the ProFTPD Auth layer.
