--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+v2.8.20:
+* Prevent the use of LDAPSearchScope or LDAPUseSSL when LDAPServer specifies
+  a URL. Instead, the desired search scope and SSL setting should be
+  specified by the URL.
+
 v2.8.19:
 * Fix compilation with old LDAP SDKs (LDAP_API_VERSION < 2000). Thanks to
   Saju Paul <saju.paul@messageway.com>.
