--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+v2.8.23:
+* Add support needed by mod_sftp_ldap for fetching user public keys.
+
 v2.8.22:
 * Disable the LDAPUseSSL directive, instead logging a warning so existing
   configurations do not cause ProFTPD startup failure. Previous versions
