--- a/README
+++ b/README
@@ -60,8 +60,8 @@ code improvements or ideas for development, please let me know!
 3. Changes
 ==========
 v2.9.2:
-- Fix segmentation fault when no user filters (second and third arguments to
-  LDAPUsers) are specified.
+- Prevent segmentation fault when no user filters (second and third
+  arguments to LDAPUsers) are specified.
 
 v2.9.1:
 - Handle potential NULL return value from crypt(). (Bug #3551)
